[package]
name = "brsar_rs"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nintendo_patricia_tree = { path = "nintendo_patricia_tree" }
binread = "1.1.1"
structopt = "*"