[package]
name = "brsar_rs"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true


[features]
debug_template = ["binread/debug_template", "nintendo_patricia_tree/debug_template"]

[dependencies]
nintendo_patricia_tree = { path = "nintendo_patricia_tree" }
binread = {version = "1.*", features = ["debug_template"] }
binwrite = "*"
structopt = "*"

[patch.crates-io]
binread = { version = "1.3", path = '../binread' }