[package]
name = "nintendo_patricia_tree"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_template = ["binread/debug_template"]

[dependencies]
bitvec = "0.19.1"
binread = "1.*"